finish user api
